# hearth

./: .gitignore  .hearth_mtp_cli_check.txt  INSTALLATION.md  KCC_FIX.md  LINTING_FIXES.md  OVERVIEW.md  README.md  SPECS.md  SYNC_SKIP_FEATURE.md  TECHNICAL_OVERVIEW.md  UI_RECOMMENDATIONS.md  UI_Recommendations.md  main.py  pyproject.toml  requirements.txt
hearth/: __init__.py  cli.py
hearth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
hearth/converters/: __init__.py  base.py  calibre.py  detection.py  kcc.py  manager.py
hearth/core/: __init__.py  config.py  opds.py  opds_client.py  settings.py
hearth/gui/: __init__.py  app.py  converter_page.py  kindle_files_page.py  main_window.py  settings_page.py  sync_page.py  wizard.py  workers.py
hearth/sync/: __init__.py  device.py  kindle_device.py  manager.py  metadata.py  mtp_backend.py  setup.py
hearth/sync/mtpx_bridge/: go.mod  main.go  mtpx_bridge
hearth/sync/mtpx_bridge/.build/: hearth-mtpx-bridge
scripts/: install_Hearth.sh  uninstall_Hearth.sh  uninstall_macos_gui.sh
tests/: conftest.py  test_config.py  test_conversion.py  test_converters.py  test_detection.py  test_device.py  test_kcc_discovery.py  test_kindle_live_write.py  test_kindle_write_paths.py  test_metadata.py  test_opds.py  test_opds_mtp.py  test_opds_traversal.py  test_settings.py  test_settings_page.py  test_setup.py  test_sync_manager.py  test_sync_manager_write_failures.py  test_sync_skip_deletion.py  test_testing_files_fixture.py
